// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component recieves className 1`] = `
<div
  className="menu TEST_CLASS"
>
  TEST
</div>
`;

exports[`Menu component render children 1`] = `
<div
  className="menu"
>
  TEST
</div>
`;
